add screenshots of my work

--- a/index.html
+++ b/index.html
@@ -394,80 +394,91 @@
     </section>
 
    
-
-    <section class="ftco-section" id="project-section">
-      <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
-          <div class="col-md-7 heading-section text-center ftco-animate">
-            <h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Projects</h2>
-            <p>Below are the projects of React Native .</p>
-          </div>
-        </div>
-        <!-- <div class="row d-flex">
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Digital Music Store Data Analysis using SQL</a></h3>
-                <p>Analyzed music store data using advanced SQL queires to identify gaps and increase the business growth.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">Data Analysis using Python Project for Beginners</a></h3>
-                <p>Performed exploratory data analysis on diwali sales data using Python to improve the customer experience.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry">
-              <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Power BI Sales dashboard Project for Beginners</a></h3>
-                <p>Designed a power bi dashboard for Madhav Store to track and analyze the online sales data acorss India.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-	<br>
-		added justify-content-center to center align the last two projects -->
-		<!-- <div class="row d-flex justify-content-center">  
+	<section class="ftco-section" id="project-section">
+		<div class="container">
+		  <div class="row justify-content-center mb-5 pb-5">
+			<div class="col-md-7 heading-section text-center ftco-animate">
+			  <h1 class="big big-2">Projects</h1>
+			  <h2 class="mb-4">My React Native Projects</h2>
+			  <p>Here are some of my React Native projects, displayed with screenshots and descriptions.</p>
+			</div>
+		  </div>
+	  
+		  <!-- Projects displayed as images with descriptions -->
+		  <div class="row d-flex">
+			
+			<!-- Project 1: SmartCUI -->
 			<div class="col-md-4 d-flex ftco-animate">
-				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
-				</a>
+			  <div class="blog-entry justify-content-end">
+				<div class="block-20 zoom-effect" style="background-image: url('images/cui.jpg');"></div>
 				<div class="text mt-3 float-right d-block">
-  
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">Sales Forecast- Time Series Forecasting</a></h3>
-				  <p>Used multiple machine learning models to forecast sales (retail store) and performed time series analysis.</p>
+				  <h3 class="heading">SmartCUI</h3>
+				  <p>Overview: This app offers personalized interview preparation for students, faculty, and alumni. It includes sections for resume upload, skill progress, job recommendations, and interview tracking.</p>
 				</div>
 			  </div>
 			</div>
+	  
+			<!-- Project 2: Petzap -->
 			<div class="col-md-4 d-flex ftco-animate">
-				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
-				</a>
+			  <div class="blog-entry justify-content-end">
+				<div class="block-20 zoom-effect" style="background-image: url('images/petz.jpg');"></div>
 				<div class="text mt-3 float-right d-block">
-  
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb">Customer Segmentation using clustering model</a></h3>
-				  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
+				  <h3 class="heading">Petzap</h3>
+				  <p>Overview: A social platform for pet lovers. Users can create pet profiles, share photos, explore posts, and find pet-mates. Includes user account settings and privacy controls.</p>
 				</div>
 			  </div>
 			</div>
-		 </div>
-	  </div> -->
-    </section>
-
+	  
+			<!-- Project 3: Digital Twin System -->
+			<div class="col-md-4 d-flex ftco-animate">
+			  <div class="blog-entry justify-content-end">
+				<div class="block-20 zoom-effect" style="background-image: url('images/goat.jpg');"></div>
+				<div class="text mt-3 float-right d-block">
+				  <h3 class="heading">Digital Twin System</h3>
+				  <p>Overview: This app is designed for farmers and farm owners to monitor the health of their goats. It features a simple and secure login process, account creation, and password reset functionalities. The app's user-friendly interface ensures easy navigation for managing goat health records and monitoring farm data.</p>
+				</div>
+			  </div>
+			</div>
+		  </div>
+	  
+		  <div class="row d-flex">
+			<!-- Project 4: Food App -->
+			<div class="col-md-4 d-flex ftco-animate">
+			  <div class="blog-entry justify-content-end">
+				<div class="block-20 zoom-effect" style="background-image: url('images/foodie.jpg');"></div>
+				<div class="text mt-3 float-right d-block">
+				  <h3 class="heading">Food App</h3>
+				  <p>Overview: This food ordering app features a lively splash screen with a modern design. It includes interactive elements such as a QR code scanner for quick menu access, a "Get Started" button to guide users through the onboarding process, and the ability to browse various food categories, customize orders, and track delivery in real time. Users can also save their favorite meals for easy reordering and receive notifications about special offers and promotions.</p>
+				</div>
+			  </div>
+			</div>
+	  
+			<!-- Project 5: Car Marketplace -->
+			<div class="col-md-4 d-flex ftco-animate">
+			  <div class="blog-entry justify-content-end">
+				<div class="block-20 zoom-effect" style="background-image: url('images/cars.jpg');"></div>
+				<div class="text mt-3 float-right d-block">
+				  <h3 class="heading">Car Marketplace</h3>
+				  <p>Overview: A car marketplace app that allows users to browse, search, and explore various car models. It includes user login, chat functionality, car recommendations, and transaction history. Features seamless navigation with a modern interface.</p>
+				</div>
+			  </div>
+			</div>
+	  
+			<!-- Project 6: Scripture Reading App -->
+			<div class="col-md-4 d-flex ftco-animate">
+			  <div class="blog-entry justify-content-end">
+				<div class="block-20 zoom-effect" style="background-image: url('images/talaim.jpg');"></div>
+				<div class="text mt-3 float-right d-block">
+				  <h3 class="heading">Scripture Reading App</h3>
+				  <p>Overview: This app facilitates reading religious scriptures, offering daily reading progress tracking, random verse selection, and categorized chapters. Users can view their progress and toggle between detailed or brief views of scripture readings.</p>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </section>
+	  
+	  
 	 <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
       <div class="container">
 		<div class="row d-md-flex align-items-center">
@@ -584,7 +595,7 @@
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
 					  <li class="ftco-animate normal-txt">Find me on  </li>
 					  <!-- <li class="ftco-animate"><a href="https://www.youtube.com/@RishabhMishraOfficial"><span class="icon-youtube"></span></a></li> -->
-					  <li class="ftco-animate"><a href="https://www.linkedin.com/zubair-ahmad-a54633283"><span class="icon-linkedin"></span></a></li>  
+					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/zubair-ahmad-a54633283"><span class="icon-linkedin"></span></a></li>  
 					  <!-- <li class="ftco-animate"><a href="https://twitter.com/rishab"><span class="icon-twitter"></span></a></li> -->
 					  <li class="ftco-animate"><a href="https://www.facebook.com/zubairahmad3336261?mibextid=ZbWKwL"><span class="icon-facebook"></span></a></li>
 				      <li class="ftco-animate"><a href="https://www.instagram.com/zubair_ahmad_rajput/profilecard/?igsh=eHVobDgwdDdhMm1v"><span class="icon-instagram"></span></a></li>
